# fast-api-starter

./: Dockerfile  README.md  aks-config.yaml  config.py  main.py  pyproject.toml
models/: person.py
routers/: people.py
