[tool.poetry]
name = "demo-api"
version = "0.1.0"
description = ""
authors = ["Stephen McMahon <stephen@slmcmahon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
debugpy = "^1.8.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
